[gd_scene load_steps=7 format=3 uid="uid://rya4g1xt6fqm"]

[ext_resource type="Script" path="res://Result/leaderboard.gd" id="1_0rxgv"]
[ext_resource type="Theme" uid="uid://c7sd3381we7ys" path="res://themes/content_angka1.tres" id="2_n3e1p"]
[ext_resource type="Theme" uid="uid://n8dd1i1ciggi" path="res://themes/font.tres" id="3_olyyv"]
[ext_resource type="Texture2D" uid="uid://cdnwg3f64qbiw" path="res://Assets/GUI/Math Game Assets/GUI/Ribbon.png" id="4_2xk8q"]
[ext_resource type="FontFile" uid="uid://kt4oj0c6rfl1" path="res://Assets/GUI/Math Game Assets/Eazy Chat/Eazy Chat.otf" id="5_bcoyq"]

[sub_resource type="LabelSettings" id="LabelSettings_3p7mc"]
font = ExtResource("5_bcoyq")
font_size = 28

[node name="LeaderBoard" type="Control"]
layout_mode = 3
anchor_right = 0.210938
anchor_bottom = 0.692901
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0rxgv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_top = 24.0
offset_right = 242.0
offset_bottom = 449.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("2_n3e1p")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_right = 242.0
offset_bottom = 425.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_olyyv")
bbcode_enabled = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_olyyv")
bbcode_enabled = true

[node name="RichTextLabel3" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_olyyv")
bbcode_enabled = true

[node name="RichTextLabel4" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_olyyv")
bbcode_enabled = true

[node name="RichTextLabel5" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_olyyv")
bbcode_enabled = true

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
offset_left = -71.0
offset_top = -17.0
offset_right = 311.0
offset_bottom = 73.0
size_flags_vertical = 0
texture = ExtResource("4_2xk8q")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.144
anchor_right = 1.0
anchor_bottom = 0.578
offset_left = 1.0
offset_top = 0.039999
offset_right = 1.0
offset_bottom = -0.0200005
grow_horizontal = 2
grow_vertical = 2
text = "SKOR TERTINGGI"
label_settings = SubResource("LabelSettings_3p7mc")
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 462.0
offset_right = 238.0
offset_bottom = 566.0
theme = ExtResource("2_n3e1p")
text = "Reset
Score"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
